<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/hymnalSelectionToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        app:title="@string/select_hymnals"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_hymnals_to_your_library"
        android:textSize="14sp"
        android:padding="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHymnals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:text="@string/continue_text"

        android:textAllCaps="false"
        app:cornerRadius="8dp"

        android:enabled="false" />

</LinearLayout>