<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="?attr/colorPrimaryContainer"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="24dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_hymn_book"
        android:contentDescription="@string/profile"
        app:civ_border_color="?attr/colorOnPrimaryContainer"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_user"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="?attr/colorOnPrimaryContainer" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/user_email"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:alpha="0.8" />

</LinearLayout>
